--- a/GitInPractice.asciidoc
+++ b/GitInPractice.asciidoc
@@ -2,3 +2,8 @@ Some initial text for tests
 
 Opening joke: przychodzi baba do lekarza...
 a lekarz tez baba
+
+changed 
+git config --local pull.rebase true
+to 'false'
+
