--- a/gitinpractice.asciidoc
+++ b/gitinpractice.asciidoc
@@ -3,4 +3,6 @@ Chapter 1
 Chapter 2
 
 git checkout master
-git merge --ff-only <branch_name>
+git merge --ff-only <branch_name
+
+edit after a long time>
